# NextWordPrediction_DL_LSTM_GRU

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: EDA.ipynb  Model_Training.ipynb  Preprocessing.ipynb  prediction.ipynb
notebooks/data/: preprocessed_data.csv
src/: utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/configs/: configurations.py
src/pipelines/: predict_pipeline.py
